# BlumAutoClick

./: CMakeLists.txt  README.md  image_parser.cpp
